@@ -21,7 +21,7 @@ ver 3.2.0
   Fix the bug of iBus input method plugin which disabled to erase the last
   preedited character even if backspace key was pressed.
   Fix the wrong height of the preediting cursor of the input method plugin
-  if the value of "inner_border" option isn't 2. (Thanks to @tsutsuii)
+  if the value of "inner_border" option isn't 2. (Thanks to @tsutsuii san)
   Fix "use_dynamic_comb" option which didn't work anymore.
 
 ver 3.1.9
